Update upload button and progress bar style inline

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <img class="upload-icon" src="https://huggingface.co/datasets/Xenova/transformers.js-docs/resolve/main/upload-icon.png" alt="Subir imagen" />
       Subir imagen
     </label>
-    <button id="clear-selection" style="margin-top: 10px;">Limpiar Selección</button>
-    <div id="progress-bar-container" style="width: 100%; height: 20px; background-color: #ddd; margin-top: 10px;">
-      <div id="progress-bar" style="height: 100%; width: 0%; background-color: #007bff;"></div>
+    <button id="clear-selection">Limpiar Selección</button>
+    <div id="progress-bar-container">
+      <div id="progress-bar"></div>
     </div>
     <div id="image-container"></div>
     <p id="status"></p>
